<resources>
    <string name="app_name">Football Score Keeper</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="score_text">Score</string>
    <string name="start_value">0</string>
    <string name="fouls">Foul</string>
    <string name="shot_failed">Shot failed</string>
    <string name="yellow_cards">Yellow card</string>
    <string name="red_cards">Red card</string>
    <string name="offside">Offside</string>
    <string name="score_gol">Score!</string>
    <string name="reset">Reset</string>
</resources>
